typescript/checker/tests/conformance/es6/Symbols/symbolType12.ts.stderr
error: NoCallSignature {
    span: Span {
        lo: BytePos(
            30,
        ),
        hi: BytePos(
            34,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType12.ts:2:15
  |
2 | var s = Symbol.for("assign");
  |               ^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            67,
        ),
        hi: BytePos(
            68,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType12.ts:4:6
  |
4 | s *= s;
  |      ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            85,
        ),
        hi: BytePos(
            86,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType12.ts:6:6
  |
6 | s /= s;
  |      ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            103,
        ),
        hi: BytePos(
            104,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType12.ts:8:6
  |
8 | s %= s;
  |      ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            121,
        ),
        hi: BytePos(
            122,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/Symbols/symbolType12.ts:10:6
   |
10 | s += s;
   |      ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            151,
        ),
        hi: BytePos(
            152,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/Symbols/symbolType12.ts:13:8
   |
13 | str += s;
   |        ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            160,
        ),
        hi: BytePos(
            161,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/Symbols/symbolType12.ts:14:6
   |
14 | s -= s;
   |      ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            179,
        ),
        hi: BytePos(
            180,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/Symbols/symbolType12.ts:16:7
   |
16 | s <<= s;
   |       ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            199,
        ),
        hi: BytePos(
            200,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/Symbols/symbolType12.ts:18:7
   |
18 | s >>= s;
   |       ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            220,
        ),
        hi: BytePos(
            221,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/Symbols/symbolType12.ts:20:8
   |
20 | s >>>= s;
   |        ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            240,
        ),
        hi: BytePos(
            241,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/Symbols/symbolType12.ts:22:6
   |
22 | s &= s;
   |      ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            258,
        ),
        hi: BytePos(
            259,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/Symbols/symbolType12.ts:24:6
   |
24 | s ^= s;
   |      ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            276,
        ),
        hi: BytePos(
            277,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/Symbols/symbolType12.ts:26:6
   |
26 | s |= s;
   |      ^

